erDiagram
  User {
    int id PK "default: autoincrement()"
    string email UK
    string? name
  }
  Post {
    int id PK "default: autoincrement()"
    string title
    string? content
    boolean published "default: false"
    int authorId FK
  }
  Comment {
    int id PK "default: autoincrement()"
    string text
    int postId FK
    int authorId FK
  }
  Tag {
    int id PK "default: autoincrement()"
    string name UK
  }
  User ||--o{ Post : "posts"
  User ||--o{ Comment : "comments"
  Post ||--o{ Comment : "comments"
  Post }o--o{ Tag : "tags"